# Mini-1

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  data.py
Data/2020-fire/: 18175209.py  merged.csv  unique_2020_fire_data.csv
src/: main.cpp
src/factory/: DataSourceFactory.cpp  DataSourceFactory.h
src/implementations/: MapDataSource.cpp  MapDataSource.h  VectorDataSource.cpp  VectorDataSource.h
src/interfaces/: IDataSource.h
src/utility/: CSVParser.cpp  CSVParser.h  Records.cpp  Records.h
